Phase 2 F1 — tipC device writeback (box) (PASS)
boundaryBoxKernel writes per-endpoint wall clearance into a new
boundaryTipC FloatArray; bridgeBoundaryTipC() min-combines into
FilSegment.end{1,2}TipC after plan.execute() and before biochem reads
stericHindranceEnd2. Closes the F1 force-coverage gap that let
polymerizing barbed ends grow through the wall on -gpu. The interim
"polymerizing box → BOA_DIAG_CPU_F1=1" caveat is lifted; F1b (pill)
inherits the same shape-parametric writeback when its kernel lands.

Held-config tipC match: T1 contact bit-equal, T2/T3 near-clearance
4.3e-18 / 8.7e-19 vs analytical. Box-spaghetti A/B (BOA_DIAG_DEVICE_
BOUNDARY_TIPC=0 vs default vs BOA_DIAG_CPU_F1=1) shows Arm A produces
6 extra polymerization events with 45 frames of sustained breach;
Arm B and the CPU reference agree on final segment count (24) and
mean excursion within Brownian noise.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>